crates/keron-lang/tests/corpus/errors/check/reconcile_chain_step_nested_reconcile.keron
val t: Symlink = symlink(from = "x", to = "y")
val s: Symlink = symlink(from = "a", to = "b")

reconcile if true {
  reconcile t
  s
} else {
  s
}
